--- a/src/components/Buy/Buy.module.sass
+++ b/src/components/Buy/Buy.module.sass
@@ -49,3 +49,8 @@
 	to
 		transform: translateX(-115%)
 		transform-origin: right center
+
+@media(max-width: 680px)
+	.buy
+		&Btns
+			@apply flex-col items-center
