--- a/src/components/Accessories/Accessories.module.sass
+++ b/src/components/Accessories/Accessories.module.sass
@@ -16,7 +16,7 @@
 		@apply uppercase text-4xl mb-7
 
 	&Row
-		@apply grid grid-cols-[repeat(auto-fill,minmax(300px,1fr))] justify-center
+		@apply grid grid-cols-[repeat(auto-fill,minmax(280px,1fr))] justify-center
 
 	&Item
 		border: 1px solid
@@ -25,7 +25,7 @@
 		@apply flex flex-col items-start p-4
 
 	&ItemImg
-		@apply max-w-[260px] w-full h-[280px] mb-2 mx-auto
+		@apply max-w-[260px] w-full h-[280px] mb-2 mx-auto object-cover
 
 	&ItemTitle
 		@apply font-helvetica text-black text-2xl mb-2
@@ -54,3 +54,22 @@
 
 		&:hover:before
 			@apply left-0
+
+@media(max-width:540px)
+	.accessories
+		@apply mb-24 font-helvetica
+
+		&Title
+			@apply uppercase text-slate-grey mb-4 text-center
+
+		&Subtitle
+			@apply uppercase text-2xl mb-7 text-center
+
+		&ItemTitle
+			@apply font-helvetica text-black text-xl mb-2
+
+		&ItemImg
+			@apply h-[220px] mb-2
+
+		&ItemText
+			@apply mb-6
