--- a/src/components/Equipment/Equipment.module.sass
+++ b/src/components/Equipment/Equipment.module.sass
@@ -24,4 +24,36 @@
     @apply row-[1/-1]
 
   &BoxImg
-    @apply mb-[10px] border border-solid border-[#CACAD6]
+    @apply mb-[10px] border border-solid border-[#CACAD6] object-cover
+
+@media(max-width:820px)
+  .equipment
+    &Box
+      @apply grid-cols-[repeat(3,1fr)]
+
+@media(max-width:680px)
+  .equipment
+    &Box
+      @apply grid-cols-1 items-center justify-center
+
+    &BoxItemOne
+      @apply row-[1/2]
+
+    &BoxImg
+      @apply w-full
+
+@media(max-width:540px)
+  .equipment
+    &Title
+      @apply mb-4
+
+    &Box
+      @apply gap-2
+
+    &BoxTitle
+      background: linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+      background-clip: text
+      text-fill-color: transparent
+      @apply text-2xl
